# humon-cy

./: .gitignore  MANIFEST.in  README.md  build_dists.py  make_test_files.sh  minimal.hu  pretty.hu  pyproject.toml  requirements.txt  setup.py  test.sh
src/humon/: chumon.pxd  humon.c  humon.pyx
tests/: comment-only-pc-ca.hu  comment-only-pm-ca.hu  comment-only-pp-cn.hu  dict-only-pm-ca.hu  foo.hu  gnome-pc-cn.hu  gnome-pm-ca.hu  gnome-pm-cn.hu  gnome-pp-ca.hu  gnome-pp-cn.hu  list-only-pm-ca.hu  metatag-only-pc-ca.hu  metatag-only-pm-ca.hu  metatag-only-pm-cn.hu  metatag-only-pp-cn.hu  test_from_api.py  test_node_api.py  test_trove_api.py  value-only-pm-ca.hu
tests/test_output/: dict_only.hu  list_only.hu  metatag_only.hu  value_only.hu
