[build-system]
requires = [
	'setuptools>=64',
	'setuptools-scm>=8.0',
	'cython'
]
build-backend = "setuptools.build_meta"

[project]
name = "humon"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.10"
authors = [
	{name = "Trevor Schrock", email = "spacemeat@gmail.com"},
]
maintainers = [
	{name = "Trevor Schrock", email = "spacemeat@gmail.com"},
]
description = "A python wrapper for the Humon C API."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["Humon", "C"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: C",
	"Programming Language :: Cython",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: Implementation :: CPython"
]

[project.urls]
Repository = "https://github.com/spacemeat/humon-cy.git"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = 'src/humon/_version.py'
